# Lesson_24.1

./: data.json  pyproject.toml
Payment/: models.py  serializers.py  services.py  urls.py  views.py
Payment/migrations/: 0001_initial.py  0002_payment_payment_id_payment_payment_url.py
config/: celery.py  settings.py  urls.py
courses/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_lesson_options.py  0003_alter_lesson_course.py  0004_alter_lesson_course.py  0005_alter_lesson_course.py  0006_course_owner_lesson_owner.py  0007_lesson_link.py  0008_subscription.py
users/: models.py  permissions.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_remove_user_country_user_city.py  0004_paymant.py  0005_rename_paymant_payment.py  0006_delete_payment.py
